turning off ca updates from web for moment

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -591,7 +591,8 @@ function map_init_basic(map, options) {
         get_data(d, map);
     }
 
-    update_coverage_data();
+    // TEMP OUT
+//    update_coverage_data();
 
 }
 
