site markers in legend fixed

--- a/tigamap/static/tigamap/tigamap_legend.css
+++ b/tigamap/static/tigamap/tigamap_legend.css
@@ -121,6 +121,11 @@ body {
     -webkit-transition: left 1s ease;
 }
 
+.site_legend {
+    display: none;
+}
+
+
 .legend:hover, .site_legend:hover {
     left: 0;
 }
