missing es translation

--- a/tigamap/static/tigamap/tigamap_legend.css
+++ b/tigamap/static/tigamap/tigamap_legend.css
@@ -121,6 +121,10 @@ body {
     -webkit-transition: left 1s ease;
 }
 
+.site_legend {
+    display: none;
+    min-height: 370px;
+}
 
 .legend:hover, .site_legend:hover {
     left: 0;
