--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -322,16 +322,16 @@ function sc2s(site_cat) {
             if (site_cat == 0) {
                 return "{% trans 'storm-drain' %}";
             }
-            else if (value.site_cat == 1) {
+            else if (site_cat == 1) {
                 return "{% trans 'Fountain' %}";
             }
-            else if (value.site_cat == 2) {
+            else if (site_cat == 2) {
                 return "{% trans 'Basin' %}";
             }
-            else if (value.site_cat == 3) {
+            else if (site_cat == 3) {
                 return "{% trans 'Bucket' %}";
             }
-            else if (value.site_cat == 4) {
+            else if (site_cat == 4) {
                 return "{% trans 'Well' %}";
             }
             else {
