update coverage from map again

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -639,8 +639,8 @@ function map_init_basic(map, options) {
         get_data(d, map);
     }
 
-    // TEMP OUT
-//    update_coverage_data();
+
+    update_coverage_data();
 
 }
 
