--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -12,26 +12,17 @@
         <h1>About Tigatrapp</h1>
     </div>
 
-    <p>AtrapaelTigre.com is a citizen science project coordinated by the <a href="http://www.movelab.net">ICREA-Movement
-        Ecology Lab</a> at the <a href="http://www.ceab.csic.es">Centre for Advanced Studies of Blanes</a> (<a
-            href="http://www.csic.es">CSIC</a>).</p>
 
-    <p>The project is being implemented in collaboration with CSIC scientific communication officers (Associate Vice
-        President for Scientific Culture, Balearic Islands Delegation, Catalonia Delegation, and Valencia Delegation)
-        and the <a href="http://www.um.es">University of Murcia</a>.</p>
+        <p>This project has been made possible thanks to support from multiple public and private entities and the work of numerous individuals.</p>
 
-    <p>The project is co-financed by the Spanish Foundation for Science and Technology (FECYT) and the Recercaixa
-        research grant program within the framework of the project "Citizen Science: education and research". Bloom is
-        collaborating in the fight against the tiger mosquito by also sponsoring the <a href="http://atrapaeltigre.com">AtrapaelTigre.com</a>
-        project.</p>
+<p>The project is coordinated by the <a href="http://www.movelab.net/">ICREA Movement Ecology Lab</a> at the <a href="http://www.ceab.csic.es/">Center for Advanced Studies of Blanes</a>, <a href="http://www.csic.es/">Consejo Superior de Investigaciones Científicas</a> (CEAB-CSIC), and <a href="http://www.creaf.cat/es">CREAF</a>.</p>
+<p>The project is cofinanced by the <a href="http://www.fecyt.es/">Spanish Foundation for Science and Technology</a> (FECYT) and the Ministry of Economy and Competitiveness, as well as by the "la Caixa" Foundation, the <a href="http://www.recercaixa.cat/ca/index.html">Recercaixa</a> research support program's “<a href="https://www.youtube.com/watch?v=XGEujAO0jdk">Citizen Science: Education and Research</a>“ program, and <a href="http://www.lokimica.com/">lokímica</a>.</p>
 
-    <p>The project also has the support of <a href="http://atrapaeltigre.com/web/ca/qui-som/">several other public and
-        private institutions</a>.</p>
 
     <p>All of the photos used in Tigatrapp were provided by <a href="http://www.eritja.com">R. Eritja</a>. </p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos.jpg" %}></a>
+                ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
     </p>
 {% endblock %}
