--- a/tigahelp/static/tigahelp/tigastyle.css
+++ b/tigahelp/static/tigahelp/tigastyle.css
@@ -41,13 +41,13 @@ text-align: center;
 }
 
 a:link {
-color:#f6d10a;
+color:#ff7500;
 font-weight:bold;
 text-decoration: none;
 }
 
 a:visited {
-color:#f6d10a;
+color:#ff7500;
 font-weight:bold;
 text-decoration: none;
 } 
