--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -23,6 +23,6 @@
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos.jpg" %}></a>
+                ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
     </p>
 {% endblock %}
