--- a/tigahelp/templates/tigahelp/about_ios_ca.html
+++ b/tigahelp/templates/tigahelp/about_ios_ca.html
@@ -12,27 +12,19 @@
         <h1>Sobre Tigatrapp</h1>
     </div>
 
-    <p>AtrapaelTigre.com és un projecte de ciència ciutadana coordinat per l'<a href="http://www.movelab.net">ICREA-Laboratori
-        d'Ecologia del Moviment</a> del <a href="http://www.ceab.csic.es">Centre d'Estudis Avançats de Blanes</a> del <a
-            href="http://www.csic.es">Consell Superior d'Investigacions Científiques</a>.</p>
+    <p>Aquest projecte és possible gràcies a la implicació creixent de moltes entitats públiques i privades, així com el suport de molts professionals.</p>
 
-    <p>Hi participen responsables de comunicació científica del Consell Superior d'Investigacions Científiques
-        (Vicepresidència Adjunta de Cultura Científica, Delegació a les Illes Balears, Delegació a Catalunya i Delegació
-        a València) i la <a href="http://www.um.es">Universitat de Múrcia</a>.</p>
+<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA-Laboratori d'Ecologia del Moviment</a> del <a href="http://www.ceab.csic.es">Centre d'Estudis Avançats de Blanes</a> del <a href="http://www.csic.es">Consell Superior d'Investigacions Científiques</a>.</p>
 
-    <p>El projecte està cofinançat per la Fundació Espanyola per la Ciència i la Tecnologia (FECYT) i pel programa
-        d'ajuts a la recerca Recercaixa, dins el marc del projecte "Ciència ciutadana: educació i recerca". Bloom col&#183;labora
-        en la lluita contra el mosquit tigre patrocinant el projecte <a href="http://atrapaeltigre.com">AtrapaelTigre.com</a>.
-    </p>
+<p>El projecte està cofinançat per la <a href="http://www.fecyt.es/">Fundació Espanyola per la Ciència i la Tecnologia</a> (FECYT) i el Ministeri d'Economia i Competitivitat. Fan possible aquest projecte a més l'Obra Social "la Caixa", el programa d'ajudes a la investigació <a href="http://www.recercaixa.cat/ca/index.html">Recercaixa</a>, dins el marc del projecte "<a href="https://www.youtube.com/watch?v=XGEujAO0jdk">Ciència ciutadana: educació i recerca</a>" i l'empresa <a href="http://www.lokimica.com/">Lokímica</a>.</p>
 
-    <p>El projecte compta a més amb el suport de <a href="http://atrapaeltigre.com/web/ca/qui-som/">vàries institucions
-        públiques i privades</a>.</p>
+
 
     <p>Les fotografies de l'App Tigatrapp han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos.jpg" %}></a>
+                ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
     </p>
 
     <p>Copyright &#169; 2014 OMA Technologies, Ibeji digital, John R.B. Palmer, Aitana Oltra, Joan Garriga, and Frederic Bartumeus</p>
