--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -152,6 +152,20 @@
 
                         <ul class="nav navbar-nav navbar-right">
 
+                        <li>
+                                                        <form class="navbar-form navbar-left" role="search">
+                                <div class="form-group">
+                                    <select id="year_select" class="selectpicker show-tick form-control"
+                                            data-style="btn-primary" data-live-search="true">
+                                        {% for version_uuid in my_version_uuids %}
+                                        <option value="{{ version_uuid }}">{{ version_uuid }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </form>
+
+                        </li>
+
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle"
                                    data-toggle="dropdown">{% trans "Reports per page" %}
